--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/asus/Downloads/javax.mail.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/jar/poi-bin-3.9-20121203/poi-3.9/poi-3.9-20121203.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse/jar/poi-bin-3.9-20121203/poi-3.9/poi-ooxml-3.9-20121203.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
